--- a/src/Shopshub.Application/Shopshub.Application.csproj
+++ b/src/Shopshub.Application/Shopshub.Application.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shopshub.Dal\Shopshub.Dal.csproj" />
+  </ItemGroup>
+
 </Project>
