--- a/src/Shopshub.Web/Shopshub.Web.csproj
+++ b/src/Shopshub.Web/Shopshub.Web.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shopshub.Application\Shopshub.Application.csproj" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\adminstatic\" />
+    <ProjectReference Include="..\Shopshub.Application\Shopshub.Application.csproj" />
   </ItemGroup>
 
 </Project>
